test/fixtures/errors/force_colors.snapshot
*force_colors.js:2
throw new Error('Should include grayed stack trace');
^

Error: Should include grayed stack trace
    at Object.<anonymous> [90m(/[39mtest*force_colors.js:2:7[90m)[39m
[90m    at *[39m
[90m    at *[39m
[90m    at *[39m
[90m    at *[39m
[90m    at *[39m
[90m    at *[39m
[90m    at *[39m
[90m    at *[39m

Node.js *
